--- a/leaveFontend/src/app/app.component.html
+++ b/leaveFontend/src/app/app.component.html
@@ -13,7 +13,7 @@
       <app-leave-request-form></app-leave-request-form>
     </mat-tab>
     <mat-tab label="ประวัติการลา">
-      <app-leave-balance-display></app-leave-balance-display>
+      <app-leave-history></app-leave-history>
     </mat-tab>
   </mat-tab-group>
 </div>
