--- a/leaveFontend/src/app/dashboard/dashboard.component.html
+++ b/leaveFontend/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,31 @@
 <div class="container">
-    <div class="col-md-12">
-        <i class="bi bi-calendar-fill text-primary"></i>
-        <p>วันลาคงเหลือ</p>
-        <p>10 วัน</p>
+    <div class="row">
+        <div class="p-3 d-flex align-items-center gap-4 shadow-sm">
+            <i class="bi bi-calendar-fill text-primary fs-2"></i>
+            <div class="mt-4">
+                <small>วันลาคงเหลือ</small>
+                <p class="fs-4 fw-bold">10 วัน</p>
+            </div>
+            <div>
+            </div>
+        </div>
+        <div class="p-3 d-flex align-items-center gap-4 shadow-sm">
+            <i class="bi bi-clock text-success fs-2"></i>
+            <div class="mt-4">
+                <small>ลาที่รออนุมัติ</small>
+                <p class="fs-4 fw-bold">2 รายการ</p>
+            </div>
+            <div>
+            </div>
+        </div>
+        <div class="p-3 d-flex align-items-center gap-4 shadow-sm">
+            <i class="bi bi-file-earmark-text-fill text-purple fs-2"></i>
+            <div class="mt-4">
+                <small>ลาทั้งหมดปีนี้</small>
+                <p class="fs-4 fw-bold">15 วัน</p>
+            </div>
+            <div>
+            </div>
+        </div>
     </div>
 </div>
