--- a/leaveFontend/src/app/leave-request-form/leave-request-form.component.html
+++ b/leaveFontend/src/app/leave-request-form/leave-request-form.component.html
@@ -1,37 +1,40 @@
-<div>
-    <div class="row col-md-12">
-        <i class="bi bi-calendar-fill text-primary"></i>
-        <h3>แบบฟอร์มขอลางาน</h3>
+<div class="container">
+    <div class="mt-3 d-flex align-items-center gap-3">
+        <i class="bi bi-calendar-fill text-primary fs-2"></i>
+        <div>
+            <h3>แบบฟอร์มขอลางาน</h3>
+        </div>
     </div>
-    <mat-card>
+    <div>
         <p>ประเภทการลา</p>
-        <mat-form-field appearance="fill">
-            <mat-label>เลือกประเภทลา</mat-label>
-            <mat-select [(ngModel)]="formData.leaveType">
-                <mat-option *ngFor="let type of leaveType" [value]="type.id">
+        <div class="col-mb-6">
+            <select class="form-control" [(ngModel)]="formData.leaveType">
+                <option value="">เลือกประเภทการลา</option>
+                <option *ngFor="let type of leaveType" [value]="type.id">
                     {{ type.name }}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
+                </option>
+            </select>
+        </div>
+        <div class="row mt-3">
+            <div class="col-md-6">
+                <p>วันที่เริ่มต้น</p>
+                <input type="date" [(ngModel)]="formData.startDate" class="form-control" />
+            </div>
 
-        <mat-form-field>
-            <mat-label>วันที่เริ่มต้น</mat-label>
-            <input matInput [matDatepicker]="datepicker" [(ngModel)]="formData.startDate" placeholder="mm/dd/yyyy">
-            <mat-datepicker #datepicker />
-            <mat-datepicker-toggle [for]="datepicker" matSuffix />
-        </mat-form-field>
+            <div class="col-md-6">
+                <p>วันที่สิ้นสุด</p>
+                <input type="date" [(ngModel)]="formData.endDate" class="form-control" />
+            </div>
+        </div>
 
-        <mat-form-field>
-            <mat-label>วันที่สิ้นสุด</mat-label>
-            <input matInput [matDatepicker]="datepicker" [(ngModel)]="formData.endDate" placeholder="mm/dd/yyyy">
-            <mat-datepicker #datepicker />
-            <mat-datepicker-toggle [for]="datepicker" matSuffix />
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>เหตุผลการลา</mat-label>
-            <textarea matInput [(ngModel)]="formData.reason"></textarea>
-        </mat-form-field>
-
-        <button > </button>
-    </mat-card>
+        <div class="mt-3">
+            <p>เหตุผลการลา</p>
+            <textarea class="form-control" [(ngModel)]="formData.reason"></textarea>
+        </div>
+        <div class="mt-3 gap-3 d-flex justify-content-end">
+            <button class="btn btn-danger btn-lg" (click)="onClear()">Clear</button>
+            <button class="btn btn-primary btn-lg" (click)="onSubmit()">Submit</button>
+        </div>
+        
+    </div>
 </div>
