--- a/leaveFontend/src/app/dashboard/dashboard.component.html
+++ b/leaveFontend/src/app/dashboard/dashboard.component.html
@@ -1,31 +1,57 @@
 <div class="container">
     <div class="row">
-        <div class="p-3 d-flex align-items-center gap-4 shadow-sm">
+        <div class="boxleave p-3 d-flex align-items-center gap-4 shadow">
             <i class="bi bi-calendar-fill text-primary fs-2"></i>
             <div class="mt-4">
                 <small>วันลาคงเหลือ</small>
-                <p class="fs-4 fw-bold">10 วัน</p>
+                <p class="fs-4 fw-bold">{{ leaveList.totalRemaining }} วัน</p>
             </div>
             <div>
             </div>
         </div>
-        <div class="p-3 d-flex align-items-center gap-4 shadow-sm">
+        <div class="boxleave p-3 d-flex align-items-center gap-4 shadow">
             <i class="bi bi-clock text-success fs-2"></i>
             <div class="mt-4">
                 <small>ลาที่รออนุมัติ</small>
-                <p class="fs-4 fw-bold">2 รายการ</p>
+                <p class="fs-4 fw-bold">{{ pendingCount }} รายการ</p>
             </div>
             <div>
             </div>
         </div>
-        <div class="p-3 d-flex align-items-center gap-4 shadow-sm">
+        <div class="boxleave p-3 d-flex align-items-center gap-4 shadow">
             <i class="bi bi-file-earmark-text-fill text-purple fs-2"></i>
             <div class="mt-4">
                 <small>ลาทั้งหมดปีนี้</small>
-                <p class="fs-4 fw-bold">15 วัน</p>
+                <p class="fs-4 fw-bold">{{ leaveList.remainingDays }} วัน</p>
             </div>
             <div>
             </div>
         </div>
     </div>
+</div>
+
+<div>
+    <h4 class="mt-4">รายการลาล่าสุด</h4>
+    <table class="table table-bordered align-center mt-3">
+        <thead>
+            <tr class="text-center">
+                <th>วันที่</th>
+                <th>ประเภท</th>
+                <th>จำนวนวันลา</th>
+                <th>สถานะ</th>
+            </tr>
+        </thead>
+        <tbody class="text-center">
+            <tr *ngFor = "let data of leaveHistory.slice(0,3)">
+                <td>{{ data.startDate | date: 'dd/MM/yyyy' }} - {{ data.endDate | date: 'dd/MM/yyyy' }}</td>
+                <td>{{ data.leaveTypeName }}</td>
+                <td>{{ data.usedDays }} วัน</td>
+                <td><span class="badge" [ngClass] = "{
+                    'bg-success': data.status === 'APPROVED',
+                    'bg-danger': data.status === 'PENDING'
+                }">{{ data.status }}</span>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
