--- a/leaveFontend/src/app/dashboard/dashboard.component.html
+++ b/leaveFontend/src/app/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
             <i class="bi bi-file-earmark-text-fill text-purple fs-2"></i>
             <div class="mt-4">
                 <small>ลาทั้งหมดปีนี้</small>
-                <p class="fs-4 fw-bold">{{ leaveList.remainingDays }} วัน</p>
+                <p class="fs-4 fw-bold">{{ leaveList.totalLeaveDays }} วัน</p>
             </div>
             <div>
             </div>
