--- a/leaveFontend/src/app/leave-history/leave-history.component.html
+++ b/leaveFontend/src/app/leave-history/leave-history.component.html
@@ -1,24 +1,57 @@
 <div class="container">
-    <table class="table table-bordered align-center">
-        <thead>
-            <tr class="text-center">
-                <th>วันที่</th>
-                <th>ประเภท</th>
-                <th>จำนวนวันลา</th>
-                <th>สถานะ</th>
-            </tr>
-        </thead>
-        <tbody class="text-center">
-            <tr *ngFor = "let data of leaveHistory">
-                <td>{{ data.startDate | date: 'dd/MM/yyyy' }} - {{ data.endDate | date: 'dd/MM/yyyy' }}</td>
-                <td>{{ data.leaveTypeName }}</td>
-                <td>{{ data.usedDays }} วัน</td>
-                <td><span class="badge" [ngClass] = "{
-                    'bg-success': data.status === 'APPROVED',
-                    'bg-danger': data.status === 'PENDING'
-                }">{{ data.status }}</span>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="card-body row p-3 mb-3 shadow">
+        <div class="col-md-6">
+            <h3>สถิติการลาประจำเดือน</h3>
+            <p class="text-muted">ข้อมูลการลาของพนักงานทั้งหมด</p>
+        </div>
+        <div class="col-md-6 d-flex justify-content-end align-items-center">
+            <button class="btn btn-success fs-5" (click)="exportFile()">Export Excel</button>
+        </div>
+    </div>
+    <div class="card-body row p-3 mb-3 shadow">
+        <div class="row p-3">
+            <div class="col-md-12">
+                <small class="text-muted">ปีที่ลา</small><br>
+                <input type="date" class="form-control mt-2" />
+            </div>
+            <div class="col-md-12 mt-2">
+                <small class="text-muted">แผนก</small><br>
+                <select class="form-control">
+                    <option value="">-- แผนก --</option>
+                    <option *ngFor="let type of department" [value]="type.id">
+                        {{ type.name }}
+                    </option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <div class="card-body row p-3 mb-3 shadow">
+        <h4>สรุปการลาแยกตามประเภท</h4>
+    </div>
+    <div class="card-body row p-3 mb-3 shadow">
+        <h4>รายละเอียดการลารายบุคคล</h4>
+        <table class="table table-bordered align-center mt-3" id="leaveHistoryTable">
+            <thead>
+                <tr class="text-center">
+                    <th>ชื่อ - สกุล</th>
+                    <th>แผนก</th>
+                    <th>ลาป่วย</th>
+                    <th>ลากิจ</th>
+                    <th>ลาพักร้อน</th>
+                    <th>รวม</th>
+                </tr>
+            </thead>
+            <tbody class="text-center">
+                <tr *ngFor="let data of leaveHistory">
+                    <td>{{ data.fullName }}</td>
+                    <td>{{ data.department }}</td>
+                    <td>{{ data.sick }} วัน</td>
+                    <td>{{ data.business }} วัน</td>
+                    <td>{{ data.vacation }} วัน</td>
+                    <td>{{ data.sumAll }} วัน</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
 </div>
