--- a/leaveFontend/src/app/submit-approved/submit-approved.component.html
+++ b/leaveFontend/src/app/submit-approved/submit-approved.component.html
@@ -7,11 +7,11 @@
     <div>
         <div class="card-body p-3 mb-3 shadow" *ngFor="let list of approveList">
             <div class="p-3 d-flex align-items-center">
-                <div class="mt-2">
+                <div class="col-md-6 mt-2">
                     <p class="fs-4 fw-bold">พชร ทีฆาวงค์</p>
                     <small class="fs-5 text-muted">CEO</small>
                 </div>
-                <div class="mt-4 d-flex gap-4 justify-content-end">
+                <div class="col-md-6 d-flex justify-content-end align-items-center">
                     <p class="badge bg-warning text-dark">{{ list.status }}</p>
                 </div>
             </div>
