--- a/leaveFontend/src/app/app.component.html
+++ b/leaveFontend/src/app/app.component.html
@@ -2,6 +2,10 @@
   <div class="row col-md-12">
     <h2>ระบบลางาน</h2>
   </div>
+  <div class="col-md-6">
+    <button class="btn btn-primary" (click)="toLogin()">Login</button>
+    <router-outlet></router-outlet>
+  </div>
 </div>
 
 <div class="container">
